--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="bg-gray-300">
         <header>
             <div class="header-wrap">
-                <div class="header-top flex justify-between w-4/5 text-blue-800 font-semibold text-2xl mx-auto">
+                <div class="header-top flex justify-between w-4/5 text-blue-800 font-semibold text-2xl py-4 mx-auto">
                     <h2>PROFILE</h2>
                     <div class="links text-gray-600">
                         <i class="fab fa-linkedin-in"></i>
